--- a/IkApp/AddPage.xaml
+++ b/IkApp/AddPage.xaml
@@ -9,6 +9,27 @@
       Title="AddPage">
 
     <Grid>
-        <TextBlock Text="Начнем работу!" Background="#FFE4B5" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="30"></TextBlock>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <TextBlock Text="Автор" Margin="0,29,0,0" Height="31" VerticalAlignment="Top"></TextBlock>
+        <TextBlock Text="Название" Grid.Row="1" Margin="0,29,0,32"></TextBlock>
+        <TextBlock Text="Год издания" Grid.Row="2" Margin="0,29,0,32"></TextBlock>
+        <TextBlock Text="Инвертарный номер" Grid.Row="3" Margin="0,29,0,32"></TextBlock>
+        <TextBox Grid.Column="1" Margin="0,29,0,32"></TextBox>
+        <TextBox Grid.Column="1" Grid.Row="1" Width="175" HorizontalAlignment="Left" Margin="0,29,0,32"></TextBox>
+        <TextBox Grid.Column="1" Grid.Row="2" Margin="0,29,0,32"></TextBox>
+        <TextBox Grid.Column="1" Grid.Row="3" Margin="0,29,0,32"></TextBox>
+
+        <Button Content="Сохранить" Grid.ColumnSpan="2" Grid.Row="4" Name="BtnSave" Click="BtnSave_Click" ></Button>
+
     </Grid>
 </Page>
