--- a/IkApp/IkPage.xaml
+++ b/IkApp/IkPage.xaml
@@ -9,6 +9,33 @@
       Title="IkPage">
 
     <Grid>
-        <Button Content="Начнем работу!"  Background="#FFE4B5" Width="175" Height="30" Click="Button_Click"></Button>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="377*"/>
+            <RowDefinition Height="77*"/>
+        </Grid.RowDefinitions>
+        <DataGrid x:Name="DGridAdd" AutoGenerateColumns="False" IsReadOnly="True" >
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="№" Binding="{Binding [Номер инвертарной книги]}" Width="25*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Инвертарный номер" Binding="{Binding [Инвертарный номер]}" Width="25*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Автор" Binding="{Binding Автор}" Width="78*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Название" Binding="{Binding Название}" Width="78*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Сведения об ответсвенности" Binding="{Binding [Сведения об ответсвенности]}" Width="78*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Сведения об издании" Binding="{Binding [Сведения об издании]}" Width="78*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Место издания" Binding="{Binding [Место издания]}" Width="78*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Год издания" Binding="{Binding [Год издания]}" Width="78*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Отметки о выбытии" Binding="{Binding [Отметки о выбытии]}" Width="78*"></DataGridTextColumn>
+                <DataGridTemplateColumn Width="auto">
+                    <DataGridTemplateColumn.CellTemplate>
+                    <DataTemplate>
+                        <Button Content="Редактировать" Name="BtnEdit" Click="BtnEdit_Click"></Button>
+                    </DataTemplate>
+                </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <Button Content="Добавить" Grid.Row="1" HorizontalAlignment="Left" Name="BtnAdd" Click="BtnAdd_Click"></Button>
+        <Button Content="Удалить" Grid.Row="1" HorizontalAlignment="Right" Name="BtnDelete" Click="BtnDelete_Click"></Button>
+
     </Grid>
 </Page>
