--- a/IkApp/Windows/MenagerWindow.xaml
+++ b/IkApp/Windows/MenagerWindow.xaml
@@ -10,18 +10,19 @@
 
         <TabControl HorizontalAlignment="Left" Height="419" VerticalAlignment="Top" Width="790">
             <TabItem Header="Книга" FontSize="16">
-                <Grid Background="#FFE5E5E5" Margin="0,0,-9,-18">
+                <Grid Margin="0,0,-4,-4">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="0*"></RowDefinition>
                     </Grid.RowDefinitions>
-                    <DataGrid x:Name="datagridkniga" Height="364" Margin="0,0,0,-363" VerticalAlignment="Top" HorizontalAlignment="Left" Width="629" >
+                    <DataGrid x:Name="datagridkniga" Height="379" Margin="0,1,0,-379" VerticalAlignment="Top" HorizontalAlignment="Left" Width="629" SelectionChanged="datagridkniga_SelectionChanged" RenderTransformOrigin="0.499,0.484" >
+
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="№" Binding="{Binding KodInventarnoyKnigi}" ></DataGridTextColumn>
                             <DataGridTextColumn Header="Автор" Binding="{Binding Author}"></DataGridTextColumn>
                             <DataGridTextColumn Header="Название" Binding="{Binding Name}"></DataGridTextColumn>
-                            <DataGridTextColumn Header="Место издания" Binding="{Binding MestoIzdaniya}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="Место издания" Binding="{Binding MestoIzdaniya}"/>
                             <DataGridTextColumn Header="Год издания" Binding="{Binding MestoIzdaniya}"></DataGridTextColumn>
-                            <DataGridTextColumn Header="Раздел с.к" Binding="{Binding RazdelSistematicheskogoKataloga}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="Раздел с.к" Binding="{Binding RazdelSistematicheskogoKataloga}"/>
                             <DataGridTextColumn Header="Наличие" Binding="{Binding Availability}"></DataGridTextColumn>
                             <DataGridTextColumn Header="Примичание" Binding="{Binding Keyword}"></DataGridTextColumn>
                             <DataGridTextColumn Header="Примичание для сотрудника" Binding="{Binding NoteToEmployees}"></DataGridTextColumn>
@@ -36,7 +37,7 @@
             </TabItem>
             <TabItem Header="Бронирование" FontSize="16">
                 <Grid >
-                    
+
                     <Grid.RowDefinitions>
                         <RowDefinition Height="0*"></RowDefinition>
                     </Grid.RowDefinitions>
@@ -54,7 +55,7 @@
                     <Button x:Name="Edit2" Content="Изменить" HorizontalAlignment="Left" Margin="635,10,0,-53" VerticalAlignment="Top" Width="148" Height="43" Click="Edit2_Click"/>
                     <Button x:Name="Refresh2" Content="Обновить" HorizontalAlignment="Left" Margin="635,70,0,-115" VerticalAlignment="Top" Width="148" Height="43" Click="Refresh2_Click"/>
                     <Button x:Name="Exit2" Content="Выход" HorizontalAlignment="Left" Margin="635,321,0,-363" VerticalAlignment="Top" Width="148" Height="43" Click="Exit2_Click"/>
-                    
+
                 </Grid>
             </TabItem>
         </TabControl>
