--- a/IkApp/Windows/MenagerWindow.xaml
+++ b/IkApp/Windows/MenagerWindow.xaml
@@ -14,7 +14,7 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="0*"></RowDefinition>
                     </Grid.RowDefinitions>
-                    <DataGrid x:Name="datagridkniga" Height="379" Margin="0,1,0,-379" VerticalAlignment="Top" HorizontalAlignment="Left" Width="629" SelectionChanged="datagridkniga_SelectionChanged" RenderTransformOrigin="0.499,0.484" >
+                    <DataGrid x:Name="datagridkniga" Height="379" Margin="0,1,0,-379" VerticalAlignment="Top" HorizontalAlignment="Left" Width="629"  RenderTransformOrigin="0.499,0.484" >
 
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="№" Binding="{Binding KodInventarnoyKnigi}" ></DataGridTextColumn>
@@ -26,6 +26,8 @@
                             <DataGridTextColumn Header="Наличие" Binding="{Binding Availability}"></DataGridTextColumn>
                             <DataGridTextColumn Header="Примичание" Binding="{Binding Keyword}"></DataGridTextColumn>
                             <DataGridTextColumn Header="Примичание для сотрудника" Binding="{Binding NoteToEmployees}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="Статус" Binding="{Binding Status}"></DataGridTextColumn>
+
                         </DataGrid.Columns>
                     </DataGrid>
                     <Button x:Name="Add" Content="Добавить" HorizontalAlignment="Left" Margin="635,10,0,-53" VerticalAlignment="Top" Width="148" Height="43" Click="Add_Click"/>
