--- a/IkApp/Windows/AdminWindow.xaml
+++ b/IkApp/Windows/AdminWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:IkApp.Windows"
         mc:Ignorable="d"
-        Title="AdminWindow" Height="450" Width="800">
+        Title="Инвертарная книга" Icon="/IkApp;component/Resources/gerb.png"  Height="450" Width="800">
     <Grid>
         <DataGrid x:Name="datagrid" HorizontalAlignment="Left" Height="419" VerticalAlignment="Top" Width="600" >
             <DataGrid.Columns>
