--- a/IkApp/Windows/AuthorisationWindow.xaml
+++ b/IkApp/Windows/AuthorisationWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:IkApp"
         mc:Ignorable="d"
-        Title="AuthorisationWindow" Height="400" Width="500">
+        Title="Инвертарная книга" Icon="/IkApp;component/Resources/gerb.png" Height="400" Width="500">
     <Grid>
         <Label Content="Авторизация" HorizontalAlignment="Left" Margin="127,24,0,0" VerticalAlignment="Top" FontSize="29" Width="239"/>
         <Label Content="Логин" HorizontalAlignment="Left" Margin="40,111,0,0" VerticalAlignment="Top" FontSize="22"/>
