--- a/IkApp/Windows/BookingWindow.xaml
+++ b/IkApp/Windows/BookingWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:IkApp"
         mc:Ignorable="d"
-        Title="BookingWindow" Height="400" Width="500">
+        Title="Инвертарная книга" Icon="/IkApp;component/Resources/gerb.png"  Height="400" Width="500">
     <Grid Margin="0,0,0,0">
         <Label Content="Имя" HorizontalAlignment="Left" Margin="36,90,0,0" VerticalAlignment="Top" FontSize="22" Height="41" Width="89"/>
         <TextBox x:Name ="Famili" HorizontalAlignment="Left" Height="40" Margin="164,31,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="250" FontSize="22" />
