--- a/IkApp/Windows/EditKnigaWindow.xaml
+++ b/IkApp/Windows/EditKnigaWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:IkApp.Windows"
         mc:Ignorable="d"
-        Title="EditKnigaWindow" Height="658" Width="750">
+        Title="Инвертарная книга" Icon="/IkApp;component/Resources/gerb.png"  Height="658" Width="750">
     <Grid>
         <Label Content="Код инвертарной книги" HorizontalAlignment="Left" Margin="20,30,0,0" VerticalAlignment="Top" Height="40" Width="232" FontSize="20"/>
         <Label Content="Автор" HorizontalAlignment="Left" Margin="20,80,0,0" VerticalAlignment="Top" Height="40" Width="100" FontSize="20"/>
