--- a/IkApp/Windows/UserWindow.xaml
+++ b/IkApp/Windows/UserWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:IkApp.Windows"
         mc:Ignorable="d"
-        Title="UserWindow" Height="450" Width="800">
+        Title="Инвертарная книга" Height="450" Width="800" Icon="/IkApp;component/Resources/gerb.png" Background="White">
     <Grid>
         <TabControl HorizontalAlignment="Left" Height="419" VerticalAlignment="Top" Width="790" >
             <TabItem Header="Книги" Margin="0,0,-2,-9" Height="29" VerticalAlignment="Top" FontSize="15">
