--- a/IkApp/Windows/UserWindow.xaml
+++ b/IkApp/Windows/UserWindow.xaml
@@ -16,12 +16,12 @@
                     </Grid.RowDefinitions>
                     <DataGrid x:Name="datagrid" HorizontalAlignment="Left" Height="364" Margin="0,35,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="615">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="№" Binding="{Binding KodInventarnoyKnigi}" Width="28"></DataGridTextColumn>
-                            <DataGridTextColumn Header="Автор" Binding="{Binding Author}" Width="51"></DataGridTextColumn>
-                            <DataGridTextColumn Header="Название" Binding="{Binding Name}" Width="75"></DataGridTextColumn>
-                            <DataGridTextColumn Header="Место издания" Binding="{Binding MestoIzdaniya}" Width="113"></DataGridTextColumn>
-                            <DataGridTextColumn Header="Год издания" Binding="{Binding GodIzdaniya}" Width="95"></DataGridTextColumn>
-                            <DataGridTextColumn Header="Раздел систематического каталога" Binding="{Binding RazdelSistematicheskogoKataloga}" Width="*"></DataGridTextColumn>
+                            <DataGridTextColumn Header="№" Binding="{Binding KodInventarnoyKnigi}" ></DataGridTextColumn>
+                            <DataGridTextColumn Header="Автор" Binding="{Binding Author}" ></DataGridTextColumn>
+                            <DataGridTextColumn Header="Название" Binding="{Binding Name}" ></DataGridTextColumn>
+                            <DataGridTextColumn Header="Место издания" Binding="{Binding MestoIzdaniya}" ></DataGridTextColumn>
+                            <DataGridTextColumn Header="Год издания" Binding="{Binding GodIzdaniya}" ></DataGridTextColumn>
+                            <DataGridTextColumn Header="Раздел систематического каталога" Binding="{Binding RazdelSistematicheskogoKataloga}" ></DataGridTextColumn>
                         </DataGrid.Columns>
                     </DataGrid>
                     <Button Content="Бронировать" HorizontalAlignment="Left" Margin="620,300,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="156" Height="40" FontSize="22" Click="Button_ClickBooking"/>
