--- a/IkApp/Windows/MenagerWindow.xaml
+++ b/IkApp/Windows/MenagerWindow.xaml
@@ -15,6 +15,7 @@
                         <RowDefinition Height="0*"/>
                     </Grid.RowDefinitions>
                     <DataGrid x:Name="datagridkniga" Height="379" Margin="0,1,0,-379" VerticalAlignment="Top" HorizontalAlignment="Left" Width="629"  RenderTransformOrigin="0.499,0.484" >
+                        
 
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="№" Binding="{Binding KodInventarnoyKnigi}" />
@@ -24,9 +25,9 @@
                             <DataGridTextColumn Header="Год издания" Binding="{Binding GodIzdaniya}"/>
                             <DataGridTextColumn Header="Раздел с.к" Binding="{Binding RazdelSistematicheskogoKataloga}"/>
                             <DataGridTextColumn Header="Наличие" Binding="{Binding Availability}"/>
-                            <DataGridTextColumn Header="Примичание" Binding="{Binding Keyword}"/>
+                            <DataGridTextColumn Header="Примичание" Binding="{Binding Type.Type1}"/>
                             <DataGridTextColumn Header="Примичание для сотрудника" Binding="{Binding NoteToEmployees}"/>
-                            <DataGridTextColumn Header="Статус" Binding="{Binding Status}"/>
+                            <DataGridTextColumn Header="Статус" Binding="{Binding Publication.StatusKniga}"/>
 
                         </DataGrid.Columns>
                     </DataGrid>
