--- a/IkApp/Windows/UserWindow.xaml
+++ b/IkApp/Windows/UserWindow.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:IkApp.Windows"
         mc:Ignorable="d"
-        Title="Инвертарная книга" Height="450" Width="800" Icon="/IkApp;component/Resources/gerb.png" Background="White">
+        Title="Инвертарная книга" Height="450" Width="800" Icon="/IkApp;component/Resources/gerb.png" >
     <Grid>
-        <TabControl HorizontalAlignment="Left" Height="419" VerticalAlignment="Top" Width="790" >
+        <TabControl HorizontalAlignment="Left" Height="419" VerticalAlignment="Top" Width="790">
             <TabItem Header="Книги" Margin="0,0,-2,-9" Height="29" VerticalAlignment="Top" FontSize="15">
-                <Grid Background="#FFE5E5E5" Margin="0,-27,0,0">
+                <Grid  Margin="0,-27,0,0">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="0*"/>
                         <RowDefinition/>
@@ -27,7 +27,7 @@
                     <Button Content="Бронировать" HorizontalAlignment="Left" Margin="620,300,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="156" Height="40" FontSize="22" Click="Button_ClickBooking"/>
                     <Button Content="Выход" HorizontalAlignment="Left" Margin="618,359,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="156" Height="40" FontSize="22" Click="Button_ClickExit"/>
                     <TextBox x:Name="SearchBox" HorizontalAlignment="Left" Height="30" Margin="442,0,0,0" Grid.RowSpan="2" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="334" TextChanged="Search"  />
-                    <Label Content="Поиск" HorizontalAlignment="Left" Margin="354,-9,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="156" FontSize="22"/>
+                    <Label Content="Поиск" HorizontalAlignment="Left" Margin="354,-9,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="83" FontSize="22"/>
                     <Button Content="Печать" x:Name="Print" HorizontalAlignment="Left" Margin="620,240,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="156"  Height="40" FontSize="22" Click="Print_Click" />
                 </Grid>
             </TabItem>
