--- a/IkApp/Windows/AuthorisationWindow.xaml
+++ b/IkApp/Windows/AuthorisationWindow.xaml
@@ -12,7 +12,7 @@
         <Label Content="Пароль" HorizontalAlignment="Left" Margin="40,201,0,0" VerticalAlignment="Top" FontSize="22"/>
         <TextBox x:Name="Login" HorizontalAlignment="Left" Height="37" Margin="170,111,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="285" FontSize="20"/>
         <Button Content="Войти" HorizontalAlignment="Left" Margin="170,289,0,0" VerticalAlignment="Top" Width="196" Height="59" FontSize="20" Click="Button_ClickEntr"/>
-        <PasswordBox x:Name="Password" HorizontalAlignment="Left" Margin="170,201,0,0" VerticalAlignment="Top" Height="39" Width="285"/>
+        <PasswordBox x:Name="Password" HorizontalAlignment="Left" Margin="170,201,0,0" VerticalAlignment="Top" Height="39" Width="285" FontSize="20" />
         <Button x:Name="Exit"  Content="Назад" HorizontalAlignment="Left" Margin="407,10,0,0" VerticalAlignment="Top" Width="75" Click="Exit_Click"/>
     </Grid>
 </Window>
